--- a/assets/style.css
+++ b/assets/style.css
@@ -3,10 +3,17 @@
     padding: 0;
 }
 
-header, footer{
+header{
     width: 100%;
-    height: 100px;
+    height: 150px;
     background-color: #4169E1	;
+    color: white;
+}
+
+footer{
+    width: 100%;
+    height: 80px;
+    background-color: #4169E1;
     color: white;
 }
 
